# io_scene_lithtech

./: .gitignore  README.md  bundle.py  convert_tex.py  pyproject.toml
.github/workflows/: main.yml
research/: arch02_extractor.py  gci_mdl_decompress.py
scripts/: bundle.py  convert_tex.py  make_manifest.py
scripts/templates/: blender_manifest.toml.j2
src/io_scene_lithtech/: __init__.py  abc.py  blender_manifest.toml  builder.py  converter.py  defines.py  dtx.py  importer.py  reader_abc_pc.py  reader_abc_v6_pc.py  reader_dat_pc.py  reader_ltb_pc.py  reader_ltb_ps2.py  settings.py  utils.py  writer_abc_pc.py  writer_abc_v6_pc.py  writer_lta_pc.py
src/io_scene_lithtech/importers/: importer_dat_pc.py
src/io_scene_lithtech/models/: dat.py
src/io_scene_lithtech/operators/: import_operator_dat_pc.py
src/io_scene_lithtech/readers/: reader_dat_pc.py
